--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="column">
                     <div class="column-2 bg-light">
                         <h2>Request Callback</h2>
-                        <form name="contact" method="POST" data-netlify="true"  action="" class="callback-form">
+                        <form name="contact" method="POST" data-netlify="true"  class="callback-form">
                             <div class="form-control">
                                 <label for="name"></label>
                                 <input type="text" name="name" id="name" placeholder="Enter Name">
@@ -190,6 +190,8 @@
                                 <input type="number" name="phone" id="phone" placeholder="Enter Phone">
                             </div>
                             <input type="submit" value="send" id="submit" class="btn">
+                            <input type="submit" value="Subscribe" class="btn btn-primary">
+
  
 
                         </form>
