--- a/index.html
+++ b/index.html
@@ -195,10 +195,21 @@
 
                         </form> -->
 
-                        <form name="contact" method="POST" data-netlify="true"  class="callback-form" >
-                            <input type="email" placeholder="Enter Email...">
-                            <input type="submit" value="Subscribe" class="btn btn-primary">
+                        <form name="contact" method="POST" data-netlify="true"  class="callback-form">
+                            <p>
+                              <label>Your Name: <input type="text" name="name" /></label>   
+                            </p>
+                            <p>
+                              <label>Your Email: <input type="email" name="email" /></label>
+                            </p>
+                            <p>
+                              <label>Message: <textarea name="message"></textarea></label>
+                            </p>
+                            <p>
+                              <button type="submit" class="btn btn-primary">Send</button>
+                            </p>
                           </form>
+                          
                     </div>
                 </div>
 
