--- a/index.html
+++ b/index.html
@@ -195,20 +195,7 @@
 
                         </form> -->
 
-                        <form name="contact" method="POST" data-netlify="true"  class="callback-form">
-                            <p>
-                              <label>Your Name: <input type="text" name="name" /></label>   
-                            </p>
-                            <p>
-                              <label>Your Email: <input type="email" name="email" /></label>
-                            </p>
-                            <p>
-                              <label>Message: <textarea name="message"></textarea></label>
-                            </p>
-                            <p>
-                              <button type="submit" class="btn btn-primary">Send</button>
-                            </p>
-                          </form>
+
                           
                     </div>
                 </div>
@@ -222,16 +209,41 @@
 
     </main>
 
-    <footer class="footer bg-dark">
-        <div class="social">
-            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+    <footer id="main-footer" class="py-2">
+        <div class="container footer-container">
+          <div>
+            <img src="img/logo_light.png" alt="NewsGrid">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit deserunt assumenda enim non? Ratione ipsum voluptates fuga eos earum vitae.</p>
+          </div>
+          <div>
+            <h3>Email Newsletter</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <form form name="contact" method="POST" data-netlify="true">
+              <input type="email" placeholder="Enter Email...">
+              <input type="submit" value="Subscribe" class="btn btn-primary">
+            </form>
+          </div>
+          <div>
+            <h3>Site Links</h3>
+            <ul class="list">
+              <li><a href="#">Help & Support</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div>
+            <h2>Join Our Club</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nesciunt!</p>
+            <a href="#" class="btn btn-secondary">Join Now</a>
+          </div>
+          <div>
+            <p>
+              Copyright &copy; 2019, All Rights Reserved
+            </p>
+          </div>
         </div>
-        <p>Copyright &copy; 2022 -EdgeLedger</p>
-    </footer>
+      </footer>
 
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
